--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,16 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.logo {
+  color          : #ffffff;
+  text-shadow    :
+  1px  1px 1px #61DAFB,
+  -1px  1px 1px #61DAFB,
+  1px -1px 1px #61DAFB,
+  -1px -1px 1px #61DAFB,
+  1px  0px 1px #61DAFB,
+  0px  1px 1px #61DAFB,
+  -1px  0px 1px #61DAFB,
+  0px -1px 1px #61DAFB;
+}
